--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,55 +5,55 @@ on:
     branches:
       - main  
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-      checks: write
+  # build:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: write
+  #     pull-requests: write
+  #     checks: write
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v2
 
-      - name: Setup .NET SDK
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '8.x'
+  #     - name: Setup .NET SDK
+  #       uses: actions/setup-dotnet@v1
+  #       with:
+  #         dotnet-version: '8.x'
 
-      - name: Install ReportGenerator
-        run: dotnet tool install -g dotnet-reportgenerator-globaltool
+  #     - name: Install ReportGenerator
+  #       run: dotnet tool install -g dotnet-reportgenerator-globaltool
 
-      - name: Restore Dependencies
-        run: dotnet restore
+  #     - name: Restore Dependencies
+  #       run: dotnet restore
 
-      - name: Build Application
-        run: dotnet build --configuration Release      
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: write
-      pull-requests: write
-      checks: write
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Build and Test with Code Coverage
-        run: |
-          dotnet test --configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura        
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          slug: MariiaParakhina/readsphere_api_gateway
-      - name: Run Qodana Scan
-        uses: JetBrains/qodana-action@v2023.3
-        env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+  #     - name: Build Application
+  #       run: dotnet build --configuration Release      
+  # test:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   permissions:
+  #     contents: write
+  #     pull-requests: write
+  #     checks: write
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v2
+  #     - name: Build and Test with Code Coverage
+  #       run: |
+  #         dotnet test --configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura        
+  #     - name: Upload coverage reports to Codecov
+  #       uses: codecov/codecov-action@v4.0.1
+  #       with:
+  #         token: ${{ secrets.CODECOV_TOKEN }}
+  #         slug: MariiaParakhina/readsphere_api_gateway
+  #     - name: Run Qodana Scan
+  #       uses: JetBrains/qodana-action@v2023.3
+  #       env:
+  #         QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
   docker:
     runs-on: ubuntu-latest
-    needs: test
+    # needs: test
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -77,7 +77,7 @@ jobs:
         env:
           GOOGLE_PROJECT: readsphere
         run: |         
-          docker build -t us-central1-docker.pkg.dev/readsphere/api-gateway  .
+          docker build -t us-central1-docker.pkg.dev/readsphere/api-gateway/api-gateway  .
           gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://us-central1-docker.pkg.dev            
           docker push us-central1-docker.pkg.dev/readsphere/api-gateway/api-gateway
      
