--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,22 +51,22 @@ jobs:
         uses: JetBrains/qodana-action@v2023.3
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
-  docker:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: set up gcp
-        uses: 'google-github-actions/auth@v2'
-        with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+  # docker:
+  #   runs-on: ubuntu-latest
+  #   needs: test
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v2
+  #     - name: set up gcp
+  #       uses: 'google-github-actions/auth@v2'
+  #       with:
+  #         credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
   
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v2'
+  #     - name: 'Set up Cloud SDK'
+  #       uses: 'google-github-actions/setup-gcloud@v2'
 
-      - name: 'Use gcloud CLI'
-        run: 'gcloud info'
+  #     - name: 'Use gcloud CLI'
+  #       run: 'gcloud info'
       # - name: set up google SDK
       #   uses: google-github-actions/setup-gcloud@v1
       #   with: 
@@ -81,23 +81,18 @@ jobs:
           # gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://us-central1-docker.pkg.dev            
           # docker push us-central1-docker.pkg.dev/readsphere/api-gateway/api-gateway
      
-  deploy:
-    runs-on: ubuntu-latest
-    needs: docker
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: set up gcp
-        uses: 'google-github-actions/auth@v2'
-        with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: docker
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v2
+  #     - name: set up gcp
+  #       uses: 'google-github-actions/auth@v2'
+  #       with:
+  #         credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
   
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v2'
-      - name: Deploy to Cloud Run
-        run: |
-          gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://us-central1-docker.pkg.dev
-          # gcloud run deploy readsphere-api-gateway --image us-central1-docker.pkg.dev/readsphere/api-gateway/api-gateway --region us-central1
+      
         
       # - name: Trigger Workflow
       #   run: |
