--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,35 +51,18 @@ jobs:
         uses: JetBrains/qodana-action@v2023.3
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
-  # docker:
-  #   runs-on: ubuntu-latest
-  #   needs: test
-  #   steps:
-  #     - name: Checkout Repository
-  #       uses: actions/checkout@v2
-  #     - name: set up gcp
-  #       uses: 'google-github-actions/auth@v2'
-  #       with:
-  #         credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+  docker:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v2
   
-  #     - name: 'Set up Cloud SDK'
-  #       uses: 'google-github-actions/setup-gcloud@v2'
-
-  #     - name: 'Use gcloud CLI'
-  #       run: 'gcloud info'
-      # - name: set up google SDK
-      #   uses: google-github-actions/setup-gcloud@v1
-      #   with: 
-      #     project_id: readsphere
-      #     service_account_key: ${{ secrets.GCP_CREDENTIALS }}
-      #     export_default_credentials: true
-      # - name: build and push
-        # env:
-          # GOOGLE_PROJECT: readsphere
-        # run: |         
-          # docker build -t us-central1-docker.pkg.dev/readsphere/api-gateway/api-gateway  .
-          # gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://us-central1-docker.pkg.dev            
-          # docker push us-central1-docker.pkg.dev/readsphere/api-gateway/api-gateway
+        - name: Build Docker Image
+          run: docker build -t book-api:latest .
+  
+        - name: Run Docker Container
+          run: docker run -d -p 8080:80 --name book-api book-api:latest
      
   # deploy:
   #   runs-on: ubuntu-latest
