--- a/appsettings.json
+++ b/appsettings.json
@@ -14,6 +14,18 @@
         "Match": {
           "Path": "/api/Book/{**catch-all}"
         }
+      },
+      "account-api-route": {
+        "ClusterId": "account-api-cluster",
+        "Match": {
+          "Path": "/api/Account/{**catch-all}"
+        }
+      },
+      "auth-api-route": {
+        "ClusterId": "auth-api-cluster",
+        "Match": {
+          "Path": "/api/Auth/{**catch-all}"
+        }
       }
     },
     "Clusters": {
@@ -27,6 +39,34 @@
             "Address": "https://book-api:443",            
             "Metadata": {
               "Scheme": "https"               
+            }
+          }
+        }
+      },
+      "account-api-cluster": {
+        "HttpClient": {
+          "SslProtocols": [ "Tls11", "Tls12" ],
+          "DangerousAcceptAnyServerCertificate": true
+        },
+        "Destinations": {
+          "book-api-destination": {
+            "Address": "https://account-api:444",
+            "Metadata": {
+              "Scheme": "https"
+            }
+          }
+        }
+      },
+      "auth-api-cluster": {
+        "HttpClient": {
+          "SslProtocols": [ "Tls11", "Tls12" ],
+          "DangerousAcceptAnyServerCertificate": true
+        },
+        "Destinations": {
+          "book-api-destination": {
+            "Address": "https://auth-api:445",
+            "Metadata": {
+              "Scheme": "https"
             }
           }
         }
