--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ jobs:
       contents: write
       pull-requests: write
       checks: write
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -59,10 +58,10 @@ jobs:
           uses: actions/checkout@v2
   
         - name: Build Docker Image
-          run: docker build -t book-api:latest .
-  
-        - name: Run Docker Container
-          run: docker run -d -p 64212:64212 --name book-api book-api:latest
+          run: |
+              echo "${{ secrets.DOCKER_HUB }}" | docker login -u mariia5345 --password-stdin
+              docker build -t ${{ secrets.CI_REGISTRY_IMAGE}}:latest .
+              docker push ${{ secrets.CI_REGISTRY_IMAGE}}:latest 
      
   # deploy:
   #   runs-on: ubuntu-latest
