--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
         - name: Checkout Repository
           uses: actions/checkout@v2            
         - name: Build Docker Image
-          run:  docker build -t api_gateway_api . 
+          run:  docker build -t mariia5345/api_gateway_api . 
         - name: Login to the account
           run:  echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
         - name: Push Docker Image
