--- a/appsettings.json
+++ b/appsettings.json
@@ -26,6 +26,12 @@
         "Match": {
           "Path": "/api/Auth/{**catch-all}"
         }
+      },
+      "progress-api-route": {
+        "ClusterId": "progress-api-cluster",
+        "Match": {
+          "Path": "/api/Progress/{**catch-all}"
+        }
       }
     },
     "Clusters": {
@@ -49,7 +55,7 @@
           "DangerousAcceptAnyServerCertificate": true
         },
         "Destinations": {
-          "book-api-destination": {
+          "account-api-destination": {
             "Address": "https://account-api:444",
             "Metadata": {
               "Scheme": "https"
@@ -63,13 +69,26 @@
           "DangerousAcceptAnyServerCertificate": true
         },
         "Destinations": {
-          "book-api-destination": {
+          "auth-api-destination": {
             "Address": "https://auth-api:445",
             "Metadata": {
               "Scheme": "https"
             }
           }
-        }
+        },
+        "progress-api-cluster": {
+          "HttpClient": {
+            "SslProtocols": [ "Tls11", "Tls12" ],
+            "DangerousAcceptAnyServerCertificate": true
+          },
+          "Destinations": {
+            "progress-api-destination": {
+              "Address": "https://progress-api:446",
+              "Metadata": {
+                "Scheme": "https"
+              }
+            }
+          }
       }
     }
   }
