--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,14 +38,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      - name: Build and Test with Code Coverage
-        run: |
-          dotnet test --configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura        
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          slug: MariiaParakhina/readsphere_api_gateway
+     
       - name: Run Qodana Scan
         uses: JetBrains/qodana-action@v2023.3
         env:
@@ -57,32 +50,30 @@ jobs:
         - name: Checkout Repository
           uses: actions/checkout@v2            
         - name: Build Docker Image
-          run:  docker build -t mariia5345/api_gateway_api . 
+          run:  docker build -t ${{secrets.DOCKER_HUB_USER}}/${{ secrets.IMAGE_NAME }}:${{ github.sha }} . 
         - name: Login to the account
-          run:  echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u mariia5345 --password-stdin
+          run:  echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u ${{secrets.DOCKER_HUB_USER}} --password-stdin
         - name: Push Docker Image
-          run: docker push mariia5345/api_gateway_api:latest 
-     
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: docker
-  #   steps:
-  #     - name: Checkout Repository
-  #       uses: actions/checkout@v2
-  #     - name: set up gcp
-  #       uses: 'google-github-actions/auth@v2'
-  #       with:
-  #         credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-  
-      
-        
-      # - name: Trigger Workflow
-      #   run: |
-      #       curl -X POST \
-      #         -H "Accept: application/vnd.github.v3+json" \
-      #         -H "Authorization: Bearer ${{ secrets.G_ACCESS_TOKEN }}" \
-      #         -H "Content-Type: application/json" \
-      #         -H "X-GitHub-Api-Version: 2022-11-28" \
-      #         -d '{"ref": "main"}' \
-      #         https://api.github.com/repos/MariiaParakhina/readsphere/actions/workflows/90898442/dispatches
- 
+          run: docker push ${{secrets.DOCKER_HUB_USER}}/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
+  deployment:
+    runs-on: ubuntu-latest
+    needs: docker
+    steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v2 
+        - name: Clone the repository
+          run: git clone https://x-access-token:${{ secrets.PAT }}@github.com/MariiaParakhina/readsphere_kubernetes.git
+        - name: Update image tag in deployment file
+          run: |
+            cd readsphere_kubernetes
+            sed -i 's|${{secrets.DOCKER_HUB_USER}}/${{ secrets.IMAGE_NAME }}:.*|${{secrets.DOCKER_HUB_USER}}/${{ secrets.IMAGE_NAME }}:${{ github.sha }}|g' ${{ secrets.PATH_DEPLOYMENT }}
+        - name: Commit and push changes
+          run: |
+            cd readsphere_kubernetes
+            git config --global user.email "${{ secrets.EMAIL }}"
+            git config --global user.name "MariiaParakhina"
+            git add .
+            git commit -m "Update image tag"
+            git push
+
+
